--- a/monadring/monadring.tex
+++ b/monadring/monadring.tex
@@ -16,7 +16,7 @@
 \begin{document}
 
 \title{Monadring: A lightweight consensus algorithm for organizing subnets upon a blockchain system}
-\author{Zhang Yu}
+\author{Zhang Yu, Gang Tang}
 \date{June 15, 2024}
 \maketitle
 
@@ -26,34 +26,73 @@ Existing blockchain networks are often large-scale, requiring transactions to be
 
 \section{Introduction}
 
-Recent blockchain systems have often adopted faster and more energy-efficient consensus protocols like Ouroboros, BABE, and Tendermint. Blockchain networks are typically open and permissionless, and we can define the degree of decentralization of such networks by the number of participating nodes. Leveraging the consensus algorithms mentioned earlier, it is possible to rapidly construct new blockchain networks. However, decentralized applications often cannot flexibly customize their degree of decentralization based on the importance of their underlying data.
+Recent blockchain systems have often adopted faster and more energy-efficient consensus protocols like Ouroboros, BABE, and Tendermint.
+Blockchain networks are typically open and permissionless, and we can define the degree of decentralization of such networks by the number of participating nodes.
+Leveraging the consensus algorithms mentioned earlier, it is possible to rapidly construct new blockchain networks.
+However, decentralized applications often cannot flexibly customize their degree of decentralization based on the importance of their underlying data.
 
-For example, decentralized social media applications may require faster response times and lower storage costs compared to decentralized finance (DeFi) applications, and hence may need a lower degree of decentralization. This flexibility to adjust the level of decentralization based on the needs of the application is an important consideration that has not been fully addressed in existing blockchain architectures.
+For example, decentralized social media applications may require faster response times and lower storage costs compared to decentralized finance applications, and hence may need a lower degree of decentralization.
+This flexibility to adjust the level of decentralization based on the needs of the application is an important consideration that has not been fully addressed in existing blockchain architectures.
 
-Building a subnetwork over an existing blockchain system is a possible way to address this issue. By drawing inspiration from the token ring architecture, we propose a novel consensus algorithm called Monadring that aims to enable nodes within an existing blockchain network to form smaller, lightweight subnetworks capable of performing computations more efficiently and cost-effectively, while still maintaining the same security guarantees as the main blockchain.
+Building a subnetwork over an existing blockchain system is a possible way to address this issue.
+By drawing inspiration from the token ring architecture, we propose a novel consensus algorithm called Monadring that aims to enable nodes within an existing blockchain network to form smaller, lightweight subnetworks capable of performing computations more efficiently and cost-effectively, while still maintaining the same security guarantees as the main blockchain.
 
-Token ring network operates at the data link layer (Layer 2) of the OSI/RM model. It was designed to solve the problem of physical link contention just like Ethernet. In a token ring network, a token is passed sequentially from one node to the next, granting the holder the right to transmit data. This token-based system for managing access to the shared medium bears some similarity to the consensus mechanisms used in blockchain networks for selecting block producer.
+Token ring network operates at the data link layer of the OSI/RM model.
+It was designed to solve the problem of physical link contention just like Ethernet.
+In a token ring network, a token is passed sequentially from one node to the next, granting the holder the right to transmit data.
+This token-based system for managing access to the shared medium bears some similarity to the consensus mechanisms used in blockchain networks for selecting block producer.
 
 Despite the fact that token ring networks have largely fallen out of favor in modern networking due to their limited scalability and other drawbacks, the underlying principles of their decentralized, token-based structure could provide valuable insights for designing a lightweight consensus algorithm for small blockchain systems.
 
-\section{Model and Definitions}
+\section{Definitions and Model}
 \paragraph{Hostnet and subnet.}
+Consider a network composed of a set of participants $V$ in which the majority obey a protocol to reach Byzantine Agreement and finality\cite{grandpa} over ledger $L$. $S_{i}$ is a subset of $V$, \( V = S_{0} \cup S_{1} \cup .. \cup S_{n-1}  \). We call $V$ is a \textit{hostnet} and $S_{i}$ is a \textit{subnet} of $V$.
+\begin{itemize}
+\item A node participant \( v \in V \) could be a member of any $S_{i}$ at meantime.\( v \in V, v \in S_{m} \cap S_{n} \) is valid.
+\item We assume the ledger $L$ of hostnet maintains all the subnets information in form of a mapping \textit{subnet id}\( \rightarrow \)\textit{node list}.
+\item Any participant of the hostnet could join a specific subnet through proposing a modification over ledger $L$.
+\item Since the ledger $L$ is under Byzantine Agreement by all participants, the map can be considered a provable information outside any subnets.
+\end{itemize}
 
-Consider a network composed of a set of participants $V$ in which the majority obey a protocol to reach Byzantine Agreement and finality\cite{grandpa} over ledger $L$. $S_{i}$ is a subset of $V$, \( V = S_{0} \cup S_{1} \cup .. \cup S_{n-1}  \).
+\paragraph{Subnet ledger.}
+For each subnet $S_{i}$, all participants \(v_{j} \in S_{i}\) maintain an independent ledger $L_{i}$ different from the ledger $L$ of hostnet, while the root state of each subnet ledger will be recorded in the hostnet ledger, \( L_{i} \nsubseteq L, \digamma(L_{i}) \in L \).
 
-A participant \( v_{j} \in V \) could be a member of any $S_{i}$ at meantime. We call $V$ is a \textit{hostnet} and $S_{i}$ is a \textit{subnet} of $V$.
+We want to formalise the procedure of reaching consensus on the ledger across all participants as a protocol that can be deployed along with any kind of blockchain network to build subnet. We can assume that the subnet ledger has properties as below:
 
-\paragraph{Subnet ledger, topology and token.}
-A subnet $S_{i}$ maintains an independent ledger $L_{i}$, but it is not a sub-set of the ledger $L$ of the hostnet. Instead, only the state root of the subnet ledger would go into the hostnet ledger, \( L_{i} \nsubseteq L, f(L_{i}) \in L \). The state root could be simply calculated by using a sparse merkle tree generated from the subnet ledger $L_{i}$.
+\begin{itemize}
+\item The subnet ledger contains all the modification events and each event has an increasemental number as index.
+The ledger is expected to be in a deterministic state after the $n_{th}$ event being applied, \(S_{n+1} = f(S_{n}, e_{n})\).
+\item Particularly, changing the function $f$ is also a kind of event. The first event $e_{0}$ is loading the function.
+\item The time complexity of looking up the $n_{th}$ event is $O(1)$.
+\item The time complexity of retrieving the maximum event id is $O(1)$.
+\end{itemize}
 
-Assume the hostnet ledger $L$ maintains all the subnets information in form of a (\textit{subnet id}, \textit{node list}) map which is under Byzantine Agreement. The participants of the subnet strictly follows the sequence of the \textit{node list} to form a ring topology.
 
-A \textit{token} $T$ of a subnet with $n$ nodes is a special signal circulates around the ring. The token carries a group of transactions from its sender and the sender{'}s forehead recursively. Each transaction contains a modification event over the subnet ledger and a number $q$.
+\paragraph{Subnet topology and token.}
 
-Whenever a node receives the token, it ought to apply all the transactions to its local ledger and decrease the associated number $q$ by 1. If the number $q$ of a transaction decreased to zero, it should be removed from the token. After handling all transactions in the token, the node should handle transactions from its local queue and put them all into the token with initial number $q=n$ and deliver the token to its successor.
+The participants of the subnet strictly follows the sequence of the \textit{node list} to form a ring topology.
+A \textit{token} $T$ of a subnet with $n$ nodes is a special signal circulates around the ring following the sequence of the \textit{node list}.
 
+\begin{itemize}
+\item The token carries groups of events from its sender and the sender{'}s forehead recursively.
+Group $G_{i}$ is composed by the node $v_{i}$. It contains a list of modification events originally from its pending request queue, the node{'}s digital signature, a digest of its local ledger after these modification applied, a number $q$ indicates how many times this group should delivered and the nonce of the signer:
+        \[G_{i} = (E = [e_{k}, e_{k+1}..e_{k+n}], S_{k+n}, signature(nonce, E, S_{k+n}), nonce, q)\]
+The event list $E$ could be empty.
 
-\paragraph{Blind challenge.} % I d like to write that Monadring supports small set of participants. e.g. only 1 participant
+\item Normally, a token circulates in a subnet with $n$ nodes should always include $n$ groups unless there were malicious behaviors or some nodes went offline.
+Whenever a node receives the token, it ought to check the signature and $q$ for each group.
+Then applying all the events of each group and compare the digest with the local ledger.
+The $q$ of executed groups should be decreased by 1.
+
+\item If all checks pass, the node should handle transactions from its local queue and compose them as a new group with initial $q=n-1$ to replace previous one in the token.
+Then try to deliver the token to its successor.
+\end{itemize}
+
+\paragraph{Malicious behaviours and offline.} TODO
+
+\paragraph{Blind challenge.} TODO % Id like to describe that Monadring supports small set of participants. e.g. only 1 participant
+
+\section{The Monadring Protocol}
 
 \bibliography{monadring}
 \end{document}
