--- a/monadring/monadring.tex
+++ b/monadring/monadring.tex
@@ -58,7 +58,7 @@ Consider a network composed of a set of participants $V$ in which the majority o
 \end{itemize}
 
 \paragraph{Subnet ledger.}
-For each subnet $S_{i}$, all participants \(v_{j} \in S_{i}\) maintain an independent ledger $L_{i}$ different from the ledger $L$ of hostnet, while the root state of each subnet ledger will be recorded in the hostnet ledger, \( L_{i} \nsubseteq L, \digamma(L_{i}) \in L \).
+For each subnet $S_{i}$, all participants \(v_{j} \in S_{i}\) maintain an independent ledger $L_{i}$ different from the ledger $L$ of hostnet, while the root state of each subnet ledger will be recorded in the hostnet ledger, \( L_{i} \nsubseteq L, F(L_{i}) \in L \).
 
 We want to formalise the procedure of reaching consensus on the ledger across all participants as a protocol that can be deployed along with any kind of blockchain network to build subnet. We can assume that the subnet ledger has properties as below:
 
@@ -80,7 +80,7 @@ Group $G_{i}$ is composed by the node $v_{i}$. It contains a list of modificatio
 \begin{equation}
 G_{i} = (E = [e_{k}, e_{k+1}..e_{k+n}], S_{k+n}, sig(nonce, E, S_{k+n}), nonce, q)
 \end{equation}
-The event list $E$ could be empty, the q could be negative.
+The event list $E$ could be empty, the $q$ could be negative.
 
 \item Normally, a token circulates in a subnet with $n$ nodes should always include $n$ groups unless there were malicious behaviors or some nodes went offline.
 Whenever a node receives the token, it ought to check the signature for each group.
@@ -91,22 +91,28 @@ The $q$ of executed groups should be decreased by 1.
 Then try to deliver the token to its successor.
 \end{itemize}
 
-Assume a subnet with $n$ nodes \( v_{0}, v_{1} .. v_{n-1}, n\geq 3\). Normally, when a node $v_{i}$ receives the token $T$, noted as $T_{i}$.
+Assume a subnet with $n$ nodes \( v_{0}, v_{1} .. v_{n-1}, n\geq 3\). If no nodes joined the subnet during last round, when a node $v_{i}$ receives the token $T$, noted as $T_{i}$.
 \begin{eqnarray}
 T_{i} &=& G_{i}, G_{(i + 1)\mod n},.., G_{(i + n - 1)\mod n}\\
 T_{i+1} &=& G_{i+1}, G_{(i+2)\mod n},..,G_{i}^{\prime}; i+1<n
 \end{eqnarray}
 
-\paragraph{Join and leave a subnet.}
-
 \paragraph{Function upgrade.}
 
-\paragraph{Malicious behaviours and offline.}
+
+\paragraph{Join and leave a subnet.} TODO
+As a sub protocol running along with a blockchain system, Monadring DOES NOT decide the members of subnets but follow the consensus of hostnet.
+In another word, the subnet nodes just handle the node joining and leaving events confirmed by hostnet.
+
+To join or leave a subnet, the node as a member of hostnet should submit a proposal to modify the hostnet ledger identified the node id.
+Typically the hostnet finality only requires a part of confirmations from all validators\cite{granpd},
+
+\paragraph{Fault tolerence.}
 The hostnet can reach the Byzantine Agreement over $L$ based on an assumption that the ratio of honest participants $r > threshold$.
 We don{'}t expect that a subnet has a same ratio. We neither don{'}t expect that a node is honest on ledger $L$ would be honest on subnet legder $L_{i}$.
-We want to find a solution to detect the malicious behaviours and exclude them from the subnet by a provable invalidity.
+We want to find a solution to detect the malicious behaviours or nodes offline then exclude them from the subnet by a provable invalidity.
 
-For simplify, we note $T_{i/i}$ as $T_{i}$ excluding the $i_{th}$ group. We can conclude that $T_{i/i}$ and $G_{i}$ must satisfy properties as below:
+For simplicity, we note $T_{i/i}$ as $T_{i}$ excluding the $i_{th}$ group. An valid $T_{i}$ must satisfy properties as below:
 
 \begin{itemize}
 \item The $q$ of $G_{i}$ satisfies \(q \leq 0\). $q=0$ implies no new nodes joined the subnet in this round, while $q < 0$ implies some new nodes have joined the subnet. The node $v_{i}$ can check the \textit{node list} from $L$.
