--- a/monadring/monadring.bib
+++ b/monadring/monadring.bib
@@ -1,7 +1,28 @@
 @article{grandpa,
-  title={GRANDPA: a Byzantine Finality Gadget},
-  author={Alistair Stewart, Eleftherios Kokoris-Kogia},
-  journal={arXiv:2007.01560},
-  year={2020},
-  url={https://arxiv.org/abs/2007.01560}
+  title   = {GRANDPA: a Byzantine Finality Gadget},
+  author  = {Alistair Stewart, Eleftherios Kokoris-Kogia},
+  journal = {arXiv:2007.01560},
+  year    = {2020},
+  url     = {https://arxiv.org/abs/2007.01560}
+}
+@inproceedings{10.1007/978-3-642-32009-5_50,
+  author    = {Brakerski, Zvika},
+  editor    = {Safavi-Naini, Reihaneh
+               and Canetti, Ran},
+  title     = {Fully Homomorphic Encryption without Modulus Switching from Classical GapSVP},
+  booktitle = {Advances in Cryptology -- CRYPTO 2012},
+  year      = {2012},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {868--886},
+  abstract  = {We present a new tensoring technique for LWE-based fully homomorphic encryption. While in all previous works, the ciphertext noise grows quadratically ({\$}{\$}B {\backslash}rightarrow B^2{\backslash}cdot {\backslash}text {\{}poly{\}}(n){\$}{\$}) with every multiplication (before ``refreshing''), our noise only grows linearly ({\$}{\$}B {\backslash}rightarrow B{\backslash}cdot {\backslash}text {\{}poly{\}}(n){\$}{\$}).},
+  isbn      = {978-3-642-32009-5}
+}
+@misc{cryptoeprint:2012/144,
+  author       = {Junfeng Fan and Frederik Vercauteren},
+  title        = {Somewhat Practical Fully Homomorphic Encryption},
+  howpublished = {Cryptology ePrint Archive, Paper 2012/144},
+  year         = {2012},
+  note         = {\url{https://eprint.iacr.org/2012/144}},
+  url          = {https://eprint.iacr.org/2012/144}
 }
