add author and org

--- a/monadring/monadring.tex
+++ b/monadring/monadring.tex
@@ -10,6 +10,7 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
+\usepackage{authblk}
 
 \usepackage{draftwatermark}
 \SetWatermarkText{\shortstack
@@ -24,7 +25,11 @@
 \begin{document}
 
 \title{Monadring: A lightweight consensus protocol for organizing subnets upon a blockchain system}
-\author{Zhang Yu, Yan Xiao, Gang Tang}
+\author[*]{Zhang Yu}
+\author[*]{Yan Xiao}
+\author[*]{Gang Tang}
+\author[*]{Helena Wang}
+\affil[*]{Verisense}
 \date{June 15, 2024}
 \maketitle
 
